--- a/src/Clients/BlazorWeb/BlazorSozluk.WebApp/Shared/MainLayout.razor
+++ b/src/Clients/BlazorWeb/BlazorSozluk.WebApp/Shared/MainLayout.razor
@@ -2,16 +2,33 @@
 
 <div class="page">
     <div class="sidebar">
-        <NavMenu />
+        <h5 class="text-white text-center sidebar-heading">@EntriesSubject</h5>
+        <a class="mode-data" @onclick="@RefreshEntries">Yenile</a>
+
+        <ul class="list-group">
+            <EntriesComponent @ref="@entriesComponent" />
+        </ul>
+
     </div>
 
-    <main>
+    <div class="main">
         <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+            <a href="http://blazor.net" target="_blank" class="ml-md-auto">About</a>
         </div>
 
-        <article class="content px-4">
+        <div class="content px-4">
             @Body
-        </article>
-    </main>
+        </div>
+    </div>
 </div>
+
+@code {
+    public string EntriesSubject { get; set; } = "bugün";
+
+    private EntriesComponent entriesComponent;
+
+    private async Task RefreshEntries()
+    {
+        await entriesComponent.RefreshList();
+    }
+}
