--- a/src/Clients/BlazorWeb/BlazorSozluk.WebApp/Shared/MainLayout.razor.css
+++ b/src/Clients/BlazorWeb/BlazorSozluk.WebApp/Shared/MainLayout.razor.css
@@ -61,6 +61,8 @@ a.top-nav-item:hover {
     display: flex;
 }
 
+
+
 a.sub-nav-item {
     margin-right: 40px;
     color: #bdbdbd;
@@ -68,13 +70,14 @@ a.sub-nav-item {
     font-weight: bold;
 }
 
-    a.sub-nav-item, a.sub-nav-item.active {
+    a.sub-nav-item:hover, a.sub-nav-item.active {
         cursor: pointer;
         color: #80be4a;
         border-color: #80be4a;
         border-bottom: solid;
         transition: all .2s ease-in-out;
     }
+
 
 .page {
     position: relative;
@@ -91,6 +94,7 @@ hr.divider {
     margin-bottom: 1em !important;
     border-width: 1px;
 }
+
 
 main {
     flex: 1;
@@ -120,11 +124,12 @@ a.more-data:hover {
     margin-bottom: 10px;
     padding-top: 5px;
     -webkit-overflow-scrolling: touch;
-    z-index: 1;
+    z-index: 1
+    /*background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);*/
 }
 
     .sidebar::-webkit-scrollbar-track {
-        -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.1);
+        -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
         border-radius: 5px;
     }
 
@@ -134,9 +139,11 @@ a.more-data:hover {
 
     .sidebar::-webkit-scrollbar-thumb {
         border-radius: 10px;
-        -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.1);
+        -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
         background-color: #1c1c1c;
     }
+
+
 
 .top-row ::deep a, .top-row ::deep .btn-link {
     white-space: nowrap;
