--- a/src/Clients/BlazorWeb/BlazorSozluk.WebApp/_Imports.razor
+++ b/src/Clients/BlazorWeb/BlazorSozluk.WebApp/_Imports.razor
@@ -9,8 +9,12 @@
 @using BlazorSozluk.WebApp
 @using BlazorSozluk.WebApp.Shared
 
+@using BlazorSozluk.Common.Models.RequestModels
+@using BlazorSozluk.Common.Models.Queries
+@using BlazorSozluk.Common.Models.Page
+@using BlazorSozluk.Common
+@using BlazorSozluk.Common.ViewModels
 
 @using BlazorSozluk.WebApp.Infrastructure.Services.Interfaces
 @using BlazorSozluk.WebApp.Pages.MainPages
-@using BlazorSozluk.Common.Models.Queries
-@using BlazorSozluk.Common
+@using BlazorSozluk.WebApp.Infrastructure.Models
