--- a/src/Clients/BlazorWeb/BlazorSozluk.WebApp/Shared/MainLayout.razor
+++ b/src/Clients/BlazorWeb/BlazorSozluk.WebApp/Shared/MainLayout.razor
@@ -46,24 +46,24 @@
 
     </div>
 
-@*    <AuthorizeView>
-        <Authorized>*@
+    <AuthorizeView>
+        <Authorized>
             <div class="top-nav">
                 <input type="button" class="form-control btn-success btn-sozluk w-auto" value="Create Entry" @onclick="@NavigateCreateEntryPage" />
                 <input type="button" class="form-control btn-success btn-sozluk w-auto" value="ME" @onclick="@NavigateMEPage" />
                 <input type="button" class="form-control btn-success btn-sozluk w-auto" value="Logout" @onclick="@NavigateLogoutPage" />
             </div>
 
-@*        </Authorized>
+       </Authorized>
 
-        <NotAuthorized>*@
+        <NotAuthorized>
             <div class="top-nav">
                 <input type="button" class="form-control btn-success btn-sozluk w-auto" value="Login" @onclick="@NavigateLoginPage" />
             </div>
-@*        </NotAuthorized>
+       </NotAuthorized>
 
     </AuthorizeView>
-*@
+
     <div class="sub-nav">
         <a class="sub-nav-item active">bugün</a>
         <a class="sub-nav-item">gündem</a>
