--- a/src/Clients/BlazorWeb/BlazorSozluk.WebApp/_Imports.razor
+++ b/src/Clients/BlazorWeb/BlazorSozluk.WebApp/_Imports.razor
@@ -18,3 +18,8 @@
 @using BlazorSozluk.WebApp.Infrastructure.Services.Interfaces
 @using BlazorSozluk.WebApp.Pages.MainPages
 @using BlazorSozluk.WebApp.Infrastructure.Models
+
+@using BlazorSozluk.WebApp.Pages.Components
+@using BlazorSozluk.WebApp.Pages.Entry.Components.RateComponents;
+@using BlazorSozluk.WebApp.Pages.Entry.Components;
+@using BlazorSozluk.WebApp.Pages.Entry;
